# jade

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: format.yml  pages.yml  test.yml
jade/: Cargo.toml
jade-cli/: Cargo.toml
jade-cli/src/: main.rs
jade-macros/: Cargo.toml
jade-macros/src/: lib.rs
jade-programs/: Cargo.toml
jade-programs/src/: lib.rs
jade-validate/: Cargo.toml  build.rs
jade-validate/benches/: bench.rs
jade-validate/examples/: md5.rs
jade-validate/examples/md5/: main.c  main.rs  md5.s
jade-validate/perfect6502/: perfect6502.c  perfect6502.h
jade-validate/src/: cli.rs  cpu_status.rs  emulator.rs  lib.rs  log.rs  main.rs  trap.rs
jade-validate/src/common/traits/: generator.rs  initial_cpu_status.rs  load_executable.rs  mod.rs  snapshot_log.rs  step_cycle.rs  validator.rs
jade-validate/src/common/types/: cpu_status.rs  error.rs  execution_error.rs  mod.rs
jade-validate/src/emulators/: emulator_6502.rs  jade.rs  mod.rs
jade-validate/src/emulators/perfect6502/: bindings.rs  mod.rs
jade-validate/src/traits/: generator.rs  mod.rs  snapshot_log.rs  validator.rs
jade/src/: main.rs
jade_lib/: Cargo.toml
pages/: index.html
paper/: abstract.typ  abstract_en.typ  bibliography.bib  main.typ  util.typ
paper/dhbw_template/: lib.typ
paper/resources/: test.txt
paper/sections/: 01-introduction.typ  02-background.typ  03-nes_architecture.typ  04-implementation.typ  05-verification.typ  06-results.typ  07-outlook.typ  background.typ  cpu_emulation.typ  results.typ  verification.typ
(+26 files in other folders)
