[package]
name = "jade-validate"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.31"
clap-num = "1.2.0"
clap_derive = "4.5.28"
jade = { path = "../jade" }
jade-programs = { path = "../jade-programs" }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.14"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
